--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<fork>true</fork>
-					<executable>C:\Program Files (x86)\Java\jdk1.8.0\bin\javac.exe</executable>
+					<executable>C:\Program Files (x86)\Java\jdk1.8.0_131\bin\javac.exe</executable>
 				</configuration>
 			</plugin>
 			<plugin>
