--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 				<version>2.19.1</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>testng_all.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
